[gd_scene load_steps=5 format=1]

[ext_resource path="res://assets/graphics/stellar/star_small.png" type="Texture" id=1]
[ext_resource path="res://resources/star/star.gd" type="Script" id=2]
[ext_resource path="res://assets/graphics/stellar/star_halo.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 19.7529

[node name="Star" type="Sprite"]

transform/pos = Vector2( 264, 264 )
texture = ExtResource( 1 )
modulate = Color( 1, 0.962402, 0.890625, 1 )
script/script = ExtResource( 2 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Twinkle" type="Sprite" parent="."]

visibility/blend_mode = 1
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
modulate = Color( 0.925781, 0.81376, 0.705185, 1 )

[node name="Haze" type="Sprite" parent="Twinkle"]

visibility/self_opacity = 0.3
visibility/blend_mode = 1
transform/scale = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Selector" type="TextureButton" parent="."]

visibility/self_opacity = 0.0
margin/left = -12.0
margin/top = -12.0
margin/right = 20.0
margin/bottom = 20.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 1 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -128, -128, 256, 256 )

[connection signal="mouse_enter" from="Area2D" to="." method="_on_Area2D_mouse_enter"]

[connection signal="mouse_exit" from="Area2D" to="." method="_on_Area2D_mouse_exit"]

[connection signal="pressed" from="Selector" to="." method="_on_Selector_pressed"]

[connection signal="enter_screen" from="Visibility" to="." method="_on_Visibility_enter_screen"]

[connection signal="exit_screen" from="Visibility" to="." method="_on_Visibility_exit_screen"]


